# q2_itsxpress

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  meta.yaml  pyproject.toml  setup.cfg  setup.py  testout.qza
.github/workflows/: python-package.yml
ITSxpress-qiime2/: __init__.py  main.py  plugin_setup.py
Tests/: in.qza  test_main.py
dd2test/: denoising_stats.qza  representative_sequences.qza  table.qza
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  modules.rst  q2_itsxpress.rst
itsxpressqiime2/: __init__.py  main.py  plugin_setup.py
itsxpressqiime2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
q2_itsxpress/: __init__.py  _itsxpress.py  citations.bib  plugin_setup.py
tests/: test_main.py
tests/test_data/pairedAllForward/445cf54a-bf06-4852-8010-13a60fa1598c/data/: MANIFEST
