[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "q2_itsxpress"
version = "1.8.1"
description = "A QIIME2 plugin to trim ITS regions using ITSxpress"
authors = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"},
    {name = "Sveinn V. Einarsson", email = "seinarsson@ufl.edu"}]
maintainers = [
    {name = "Adam R. Rivers", email =  "adam.rivers@usda.gov"},
    {name = "Sveinn V. Einarsson", email = "seinarsson@ufl.edu"}]
license = {file = "LICENSE.txt"}
readme = "README.rst"
keywords = ["Qiime2", "plugin", "Amplicon", "sequencing", "fungal", "ITS"]
requires-python = ">=3.5"

dependencies = [
"qiime2",
"itsxpress >=1.8.1",
"pandas",
]

classifiers = [
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.5",
    "Development Status :: 3 - Alpha"
]


[project.urls]
repository = "http://github.com/usda-ars-gbru/q2_itsxpress"



[project.optional-dependencies]
tests = [
"pytest"
]

[project.entry-points."qiime2.plugins"]
q2_itsxpress="q2_itsxpress.plugin_setup:plugin"

[tool.setuptools.package-data]
q2_itsxpress = ["*.bib"]
