# setup.cfg file at the root directory
[metadata]
name=q2_itsxpress
version=1.8.1
author=Adam R. Rivers, Kyle C. Weber, Sveinn V. Einarsson
author_email=adam.rivers@ars.usda.gov, kweber1@ufl.edu, seinarsson@ufl.edu
license=License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication
description=A QIIME2 plugin to trim ITS regions using ITSxpress
long_description= file:README.rst
keywords=Qiime2 plugin Amplicon sequencing fungal ITS
url=https://github.com/usda-ars-gbru/q2_itsxpress
classifiers=
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Development Status :: 3 - Alpha

[options]
python_requires = >3.5
zip_safe = False
include_package_data=True
packages = find:
install_requires=
    qiime
    itsxpress
    pandas
    
[options.extras_require]
test = 
    pytest

[options.entry_points]
qiime2.plugins=
    q2_itsxpress=q2_itsxpress.plugin_setup:plugin



